2010-09-15  Romain Francois <romain@r-enthusiasts.com>

    * DESCRIPTION: added the declaration MinimumSvnRev to control which version
    of R-devel we need so that Rcpp fully works, currently set to 52905
    
    * R/zzz.R: check the svn revision of R against the declared MinimumSvnRev
    requirement and print a message if necessary (this will only stay for the 
    interim period while we develop 0.8.7 so that we all are on the same page.

    * inst/include/Rcpp/Module.h: added methods to class_Base : methods_arity 
    and methods_voidness to query the number of arguments of methods of a class
    and if the method is void
    
    * R/Module.R: implement referenceMethods (from methods) for 'C++Class'
    
2010-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Add include of unistd.h to make Solaris happy

2010-09-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.6

	* debian/*: Similarly updated for new release to Debian

2010-09-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Also include typeinfo header file

2010-09-08  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h : added class_Base::property_names method
	to grab the names of all fields (properties)

	* src/Module.cpp : added R access (.Call) function CppClass__properties
	to grab the names of the fields (property) from the XP of a class

	* inst/include/Rcpp/Module.h : added class_Base::property_is_readonly method
	to query if a property is read only

	* src/Module.cpp : added R access (.Call) function CppClass__property_is_readonly
	to query if a class property is read only

	* inst/include/Rcpp/Module.h : added class_Base::property_class method
	to grab the C++ class of a property

	* src/Module.cpp : added R access (.Call) function CppClass__property_class
	to grab the C++ class of a property

2010-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/ConvolveBenchmarks/exampleRCode.r: Rewritten /