@@ -164,15 +164,15 @@ class CppProperty {
 		virtual std::string get_class(){ return ""; }
 } ;
 
-//// template <typename Class>
-//// class S4_field : public Rcpp::S4 {
-//// public:
-////     S4_field( CppProperty<Class>* p ) : S4( "C++Field" ){
-////         slot( "read_only" ) = p->is_readonly() ;
-////         slot( "cpp_class" ) = p->get_class();
-////         slot( "pointer" )   = Rcpp::XPtr< CppProperty<Class> >( p, false ) ;
-////     }
-//// } ;
+template <typename Class>
+class S4_field : public Rcpp::S4 {
+public:
+    S4_field( CppProperty<Class>* p ) : S4( "C++Field" ){
+        slot( "read_only" ) = p->is_readonly() ;
+        slot( "cpp_class" ) = p->get_class();
+        slot( "pointer" )   = Rcpp::XPtr< CppProperty<Class> >( p, false ) ;
+    }
+} ;
 
 
 #include <Rcpp/module/Module_Property.h>
@@ -357,18 +357,18 @@ public:
 	VOID_END_RCPP
 	}
 	
-	//// Rcpp::List fields( ){
-	////     int n = properties.size() ;
-	//// 	Rcpp::CharacterVector pnames(n) ;
-	//// 	Rcpp::List out(n) ;
-	//// 	typename PROPERTY_MAP::iterator it = properties.begin( ) ;
-	//// 	for( int i=0; i<n; i++, ++it){
-	//// 		pnames[i] = it->first ;
-	//// 		out[i] = S4_field<Class>( it->second ) ; 
-	//// 	} 
-	//// 	out.names() = pnames ;
-	//// 	return out ;
-	//// }
+	Rcpp::List fields( ){
+	    int n = properties.size() ;
+		Rcpp::CharacterVector pnames(n) ;
+		Rcpp::List out(n) ;
+		typename PROPERTY_MAP::iterator it = properties.begin( ) ;
+		for( int i=0; i<n; i++, ++it){
+			pnames[i] = it->first ;
+			out[i] = S4_field<Class>( it->second ) ; 
+		} 
+		out.names() = pnames ;
+		return out ;
+	}
 
 #include <Rcpp/module/Module_Field.h>
 
