@@ -273,7 +273,7 @@ namespace Rcpp{
 		mangled_name += cl->name ;
 		slot( ".Data" ) = mangled_name ;
 		
-		//// slot( "fields" ) = cl->fields() ;
+		slot( "fields" ) = cl->fields() ;
 		
 	}
 
